# -

my-compiler/: package_compiler.ps1
my-compiler/doc/: DCE.md  乘除法.md  优化1.md  优化文档.md  总结感想.md
my-compiler/src/: CMakeLists.txt  Error.hpp  ErrorType.hpp  InstructionStatistics.txt  Makefile  Token.hpp  TokenType.hpp  _out.txt  config.json  create_compiler_zip.ps1  error.txt  lexer.cpp  lexer.txt  llvm_ir.txt  llvm_ir_before.txt  main.cpp  mips.txt  mips_before.txt  parser.txt  run_tests.ps1  symbol.txt  symbol_debug.txt  testfile.txt  testfile7_22377272_秦浩楠_优化前中间代码.txt
my-compiler/src/backend/: MipsGenerator.cpp  MipsGenerator.hpp  README.md
my-compiler/src/error/: Error.hpp  ErrorRecorder.cpp  ErrorRecorder.hpp  ErrorType.hpp  ErrorUtils.hpp
my-compiler/src/frontend/: FrontendDriver.cpp  FrontendDriver.hpp
my-compiler/src/frontend/ast/: AST.cpp  AST.hpp  CompUnit.cpp  CompUnit.hpp  Node.cpp  Node.hpp  README.md
my-compiler/src/frontend/lexer/: Lexer.hpp  Token.hpp  TokenPrinter.hpp  TokenStream.hpp  TokenType.hpp  lexer.cpp
my-compiler/src/frontend/parser/: Parser.cpp  Parser.hpp  ParserOutput.cpp  ParserOutput.hpp  README.md
my-compiler/src/midend/: README.md  SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Symbol.hpp  SymbolManager.cpp  SymbolManager.hpp
my-compiler/src/midend/analysis/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp
my-compiler/src/midend/irgen/: IRGenerator.cpp  IRGenerator.hpp
my-compiler/src/midend/llvm/: IrBuilder.cpp  IrBuilder.hpp  IrModule.cpp  IrModule.hpp
my-compiler/src/midend/llvm/instr/: AllocaInstr.hpp  AluInstr.hpp  BranchInstr.hpp  CallInstr.hpp  GepInstr.hpp  IcmpInstr.hpp  Instr.hpp  InstrToString.cpp  InstrType.hpp  JumpInstr.hpp  LoadInstr.hpp  PhiInstr.hpp  ReturnInstr.hpp  StoreInstr.hpp  TruncInstr.hpp  ZextInstr.hpp
my-compiler/src/midend/llvm/type/: IrArrayType.hpp  IrBaseType.hpp  IrFunctionType.hpp  IrPointerType.hpp  IrType.cpp  IrType.hpp
my-compiler/src/midend/llvm/value/: IrBasicBlock.cpp  IrBasicBlock.hpp  IrConstant.hpp  IrConstantArray.hpp  IrConstantInt.hpp  IrFunction.cpp  IrFunction.hpp  IrGlobalValue.hpp  IrUse.hpp  IrUser.hpp  IrValue.cpp  IrValue.hpp  ValueToString.cpp
my-compiler/src/midend/symbol/: SemanticAnalyzer.cpp  SemanticAnalyzer.hpp  Symbol.hpp  SymbolManager.cpp  SymbolTable.hpp
my-compiler/src/optimize/: Mem2Reg.cpp  Mem2Reg.hpp  Pass.hpp  PassManager.hpp  README.md
my-compiler/src/utils/: README.md
my-compiler/test/2025代码生成公共测试程序库/D/testcase1/: testfile.txt
my-compiler/test/2025代码生成公共测试程序库/D/testcase2/: testfile.txt
my-compiler/test/2025代码生成公共测试程序库/D/testcase3/: testfile.txt
my-compiler/test/2025代码生成公共测试程序库/D/testcase4/: testfile.txt
my-compiler/test/2025代码生成公共测试程序库/D/testcase5/: testfile.txt
my-compiler/test/2025代码生成公共测试程序库/D/testcase7/: testfile.txt
my-compiler/test/2025代码生成公共测试程序库/D/testcase8/: testfile.txt  tets.c
my-compiler/test/2025词法分析公共测试程序库/2025词法分析公共测试程序库/A/testcase2/: ans.txt
my-compiler/test/2025词法分析公共测试程序库/2025词法分析公共测试程序库/A/testcase3/.ipynb_checkpoints/: ans-checkpoint.txt
my-compiler/test/2025词法分析公共测试程序库/2025词法分析公共测试程序库/B/testcase2/: ans.txt
my-compiler/test/2025词法分析公共测试程序库/2025词法分析公共测试程序库/C/testcase3/: ans.txt
my-compiler/test/2025词法分析公共测试程序库/A/testcase6/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/A/testcase1/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/A/testcase2/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/A/testcase4/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/A/testcase5/: ans.txt  testfile.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/A/testcase6/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/B/testcase1/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/B/testcase5/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/B/testcase7/: ans.txt  config.json
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/error/testcase1/: testfile.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/error/testcase4/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/2025语义分析公共测试程序库/error/testcase5/: testfile.txt
my-compiler/test/2025语义分析公共测试程序库/A/testcase2/: testfile.txt
my-compiler/test/2025语义分析公共测试程序库/A/testcase3/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/B/testcase2/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/B/testcase3/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/B/testcase4/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/C/testcase1/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/C/testcase2/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/C/testcase3/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/C/testcase4/: ans.txt
my-compiler/test/2025语义分析公共测试程序库/error/testcase1/: config.json
my-compiler/test/2025语义分析公共测试程序库/error/testcase5/: ans.txt  config.json
my-compiler/test/2025语法分析公共测试程序库/A/testcase2/: ans.txt
my-compiler/test/2025语法分析公共测试程序库/A/testcase3/.ipynb_checkpoints/: ans-checkpoint.txt
my-compiler/test/2025语法分析公共测试程序库/A/testcase6/.ipynb_checkpoints/: ans-checkpoint.txt
my-compiler/test/2025语法分析公共测试程序库/B/testcase2/: ans.txt
my-compiler/test/2025语法分析公共测试程序库/B/testcase3/: ans.txt
my-compiler/test/2025语法分析公共测试程序库/C/testcase2/: ans.txt
my-compiler/test/2025语法分析公共测试程序库/C/testcase3/: ans.txt
my-compiler/test/2025语法分析公共测试程序库/error/testcase1/: config.json
my-compiler/test/2025语法分析公共测试程序库/error/testcase2/: ans.txt  testfile.txt
my-compiler/test/文法解读/: _testfile1.c  _testfile2.c  _testfile4.c  create_zip.ps1  output1.txt  output6.txt  testfile1.txt  testfile3.txt  testfile4.txt
my-compiler/test_outputs_2025_codegen/: D_testcase1_llvm_ir.txt  D_testcase1_testfile.txt  D_testcase2_llvm_ir.txt  D_testcase2_testfile.txt  D_testcase3_llvm_ir.txt  D_testcase3_testfile.txt  D_testcase4_llvm_ir.txt  D_testcase4_testfile.txt  D_testcase5_llvm_ir.txt  D_testcase5_testfile.txt  D_testcase6_llvm_ir.txt  D_testcase6_testfile.txt  D_testcase7_testfile.txt
my-compiler/参考资料/: 2025编译技术实验中间代码输出格式说明.docx  专题报告-代码生成（LLVM+IR）.pptx  专题报告-代码生成（PCode）.pptx  专题报告-代码生成（四元式）.pptx
(+2 files in other folders)
